--- a/index.html
+++ b/index.html
@@ -26,5 +26,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	
 	<a href="https://analytics.google.com/analytics/web">Goolgle Analytics<a>
 	<a href="https://tagmanager.google.com">Goolgle Tag Manager<a>
+	<a href="http://analytics.naver.com">Naver Analytics<a>
+	
+	
+	
+		
+	<script type="text/javascript" src="http://wcs.naver.net/wcslog.js"></script>
+	<script type="text/javascript">
+	if(!wcs_add) var wcs_add = {};
+	wcs_add["wa"] = "3fefd1cfb3d39c";
+	wcs_do();
+	</script>
+	
+	
   </body>
 </html>
